Kaggle Notebook | A Interview Questions & Answers | Version 2

--- a/a-interview-questions-answers.ipynb
+++ b/a-interview-questions-answers.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5aa00f8f",
+   "id": "c682086a",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-03-09T02:45:20.659535Z",
-     "iopub.status.busy": "2023-03-09T02:45:20.658243Z",
-     "iopub.status.idle": "2023-03-09T02:45:20.673215Z",
-     "shell.execute_reply": "2023-03-09T02:45:20.672251Z"
+     "iopub.execute_input": "2023-03-09T08:19:28.912608Z",
+     "iopub.status.busy": "2023-03-09T08:19:28.911241Z",
+     "iopub.status.idle": "2023-03-09T08:19:28.924557Z",
+     "shell.execute_reply": "2023-03-09T08:19:28.923290Z"
     },
     "papermill": {
-     "duration": 0.023141,
-     "end_time": "2023-03-09T02:45:20.675800",
+     "duration": 0.024047,
+     "end_time": "2023-03-09T08:19:28.928113",
      "exception": false,
-     "start_time": "2023-03-09T02:45:20.652659",
+     "start_time": "2023-03-09T08:19:28.904066",
      "status": "completed"
     },
     "tags": []
@@ -45,13 +45,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7953bf8",
+   "id": "a2bd0702",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-09T08:05:46.568707Z",
+     "iopub.status.busy": "2023-03-09T08:05:46.567725Z",
+     "iopub.status.idle": "2023-03-09T08:05:46.576474Z",
+     "shell.execute_reply": "2023-03-09T08:05:46.574323Z",
+     "shell.execute_reply.started": "2023-03-09T08:05:46.568661Z"
+    },
+    "papermill": {
+     "duration": 0.002829,
+     "end_time": "2023-03-09T08:19:28.934308",
+     "exception": false,
+     "start_time": "2023-03-09T08:19:28.931479",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# What is ARIMA (Auto Regressive Integrated Moving Average) Model ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e697f8b",
    "metadata": {
     "papermill": {
-     "duration": 0.001947,
-     "end_time": "2023-03-09T02:45:20.680359",
+     "duration": 0.002982,
+     "end_time": "2023-03-09T08:19:28.940375",
      "exception": false,
-     "start_time": "2023-03-09T02:45:20.678412",
+     "start_time": "2023-03-09T08:19:28.937393",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "An ARIMA model is a statistical method used for time series forecasting that captures different patterns or features that reflect how the data change over time. For example, temporal structures can include trends, seasonality, cycles, autocorrelation, etc. It is a class of model that uses past values (autoregressive), differences (integrated) and errors (moving average) to predict future values.\n",
+    "\n",
+    "An example of using an ARIMA model for stock prediction is to forecast the future prices of a stock based on its past performance. This can be done by fitting an ARIMA model to the historical data and then using it to generate forecasts for a given period. \n",
+    "\n",
+    "There are different ways to choose the parameters of an ARIMA model, such as grid search, auto-arima or AIC/BIC criteria.\n",
+    "\n",
+    "However, ARIMA models have some limitations when applied to stock prediction, such as assuming linearity, stationarity and constant variance in the data. They also do not account for external factors that may affect the stock prices, such as news, events or market sentiment. Therefore, they may not be very accurate or reliable for long-term forecasting or volatile markets.\n",
+    "\n",
+    "## Advantages \n",
+    "\n",
+    "## Disadvantages\n",
+    "\n",
+    "## How to improve accuracy of ARIMA MODELS?\n",
+    "There are different ways to improve the accuracy of ARIMA models, depending on the characteristics of the data and the forecasting goal. \n",
+    "\n",
+    "Some possible methods are:\n",
+    "\n",
+    "1. Choosing appropriate parameters for ARIMA models based on statistical criteria, such as AIC or BIC, or using automated methods, such as auto-arima.\n",
+    "2. Transforming or differencing the data to make it more stationary and reduce heteroscedasticity.\n",
+    "3. Decomposing the data into trend, seasonality and residual components and applying ARIMA to each component separately.\n",
+    "4. Combining ARIMA with other methods, such as exponential smoothing, neural networks or machine learning algorithms, to capture nonlinear patterns and external factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb08778",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002566,
+     "end_time": "2023-03-09T08:19:28.945984",
+     "exception": false,
+     "start_time": "2023-03-09T08:19:28.943418",
      "status": "completed"
     },
     "tags": []
@@ -73,13 +134,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30051393",
+   "id": "bd05656d",
    "metadata": {
     "papermill": {
-     "duration": 0.001792,
-     "end_time": "2023-03-09T02:45:20.684189",
+     "duration": 0.002414,
+     "end_time": "2023-03-09T08:19:28.951216",
      "exception": false,
-     "start_time": "2023-03-09T02:45:20.682397",
+     "start_time": "2023-03-09T08:19:28.948802",
      "status": "completed"
     },
     "tags": []
@@ -97,13 +158,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad36a32",
+   "id": "16f6b0f4",
    "metadata": {
     "papermill": {
-     "duration": 0.001747,
-     "end_time": "2023-03-09T02:45:20.687891",
+     "duration": 0.002546,
+     "end_time": "2023-03-09T08:19:28.956432",
      "exception": false,
-     "start_time": "2023-03-09T02:45:20.686144",
+     "start_time": "2023-03-09T08:19:28.953886",
      "status": "completed"
     },
     "tags": []
@@ -118,13 +179,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8386d7aa",
+   "id": "81932721",
    "metadata": {
     "papermill": {
-     "duration": 0.001755,
-     "end_time": "2023-03-09T02:45:20.691678",
+     "duration": 0.00242,
+     "end_time": "2023-03-09T08:19:28.961558",
      "exception": false,
-     "start_time": "2023-03-09T02:45:20.689923",
+     "start_time": "2023-03-09T08:19:28.959138",
      "status": "completed"
     },
     "tags": []
@@ -157,14 +218,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.406298,
-   "end_time": "2023-03-09T02:45:21.415743",
+   "duration": 12.397552,
+   "end_time": "2023-03-09T08:19:29.891004",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-03-09T02:45:10.009445",
+   "start_time": "2023-03-09T08:19:17.493452",
    "version": "2.4.0"
   }
  },
